--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "iniyan_insights",
+  "name": "react-redux-crud",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
-  },
-  "keywords": [],
-  "author": "Logesh <phoenix.logu@gmail.com> (http://logeshkumar.com/)",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack-dev-server --mode=development"
+  },
   "dependencies": {
-    "axios": "0.15.2",
-    "body-parser": "1.15.2",
-    "cors": "2.8.1",
-    "dotenv": "2.0.0",
-    "express": "4.14.0",
-    "fb": "1.1.1",
-    "immutable": "3.8.1",
-    "lodash": "4.16.6",
-    "morgan": "1.7.0",
-    "react": "15.3.2",
-    "react-d3": "0.4.0",
-    "react-d3-basic": "1.6.11",
-    "react-d3-core": "1.3.9",
-    "react-dom": "15.3.2",
-    "react-redux": "4.4.5",
-    "react-router": "3.0.0",
-    "react-router-redux": "4.0.7",
-    "redux": "3.6.0",
-    "redux-immutable": "3.0.8",
-    "redux-thunk": "2.1.0"
+    "await-to-js": "^2.0.1",
+    "axios": "^0.18.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "lodash.curryright": "^4.1.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-core": "6.18.2",
-    "babel-loader": "6.2.7",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-1": "6.16.0",
-    "webpack": "1.13.3",
-    "webpack-dev-server": "1.16.2"
+    "autoprefixer": "^8.5.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "postcss-loader": "^2.1.5",
+    "react-hot-loader": "^4.2.0",
+    "sass": "^1.3.2",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.9.1",
+    "webpack-assets-manifest": "^3.0.1",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4"
   }
 }
